--- a/2/LendingTree/LTWeb/Views/Questions/TermsConsent.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/TermsConsent.cshtml
@@ -5,17 +5,49 @@
         <div class="scroll-content-block">
             <div class="accept-detail-panel">
                 <ul>
-                    <li>our <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/termsofuse?popup=true')">
-                        <span>Terms of Use Agreement</span></a> and <a href="javascript:STMRCWindow('http://www.lendingtree.com/stmrc/privacy.asp?popup=true&bp=ltquickmatch', 550, 450)">
+                    <li>Our <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/terms-of-use')">
+                        <span>Terms of Use Agreement</span></a> and <a href="javascript:STMRCWindow('javascript:STMRCWindow('https://www.lendingtree.com/legal/privacy-policy', 550, 450)">
                             <span>Privacy Policy</span></a></li>
-                    <li>to receive important notices, disclosures and other communications ("Disclosures and Communications") in electronic form (either email or via the Internet) as 
-                    provided for in this
-                        <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/network-lenders-consent?popup=true')">
-                            <span>Consent to Receive Electronic Disclosures from Lending Tree and/or our Network Lenders</span></a>
-                            In addition, if you proceed with a Loan Application with 
-                            our Network Lenders, they can provide you with Disclosures and Communications in Electronic form. You understand that you will need an email address, Internet 
-                            access and PDF software to review the Disclosures and Communications.</li>
-                    <li>that we may access your credit file even if your social security number is not provided.</li>
+                   <li>To receive important notices, and other <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/network-lenders-consent')">communications</a> at any telephone number or email address (including a mobile device) you entered so 
+
+                                            that LendingTree, up to five (5) lenders with whom you have been matched, or one of its third party associates can reach you regarding this request. 
+
+                                            This authorization removes any previous registration(s) on a federal or state Do-Not-Call (DNC) registry or any internal opt-out/unsubscribe requests you may have previously 
+
+                                            requested with LendingTree or matched lenders.</li>
+
+                                            
+
+                                            
+
+                                            <li>That LendingTree, a lender with whom you have been matched, or one of its third party associates may use an automatic dialing system in connection 
+
+                                            with calls made to any telephone number you entered, even 
+
+                                            if it is a cellular phone number or other service for which the called person(s) could be charged for such call.</li>
+
+                                            
+
+                                            <li>That I have received and reviewed the <a href="javascript:STMRCWindow('https://secure.lendingtree.com/stmrc/brokerstatedisclosure.asp?state=AL')">
+
+                                                Mortgage Broker Disclosures</a> for my state <span id="myStateDisclosure">
+
+                                                    AL</span> </li>
+
+                                            
+
+                                            
+
+                                            <li>
+
+                                            You are providing written consent under the Fair Credit Report Act for LendingTree, LLC and its 
+
+                                            lenders with whom you are matched to obtain consumer report "soft inquiry" 
+
+                                            information from your credit profile or other information from our contracted Credit Bureau.
+
+                                            </li>
+
                                             
                 </ul>
             </div>
