--- a/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
+++ b/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="website-wrapper">
-        <div id="topheader" class="png">
-            <span id="tagline" class="inline">Get instant mortgage offers </span>
+        <div id="topheader" class="png">F
+            <span id="tagline" class="inline">Get mortgage offers</span>
         </div>
         <div id="step1" class="board-content-data">
             <div class="left-rail inline">
@@ -31,30 +31,22 @@
                     <div class="smallLabel">Example payments are for a 5/1 ARM rates subject</div>
                 </div>
                 <div id="payments">
-                    <h2 class="green">$200,000 mortgage for $817/mo.</h2>
-                    <h2 class="green">$300,000 mortgage for $1,205/mo.</h2>
-                    <h2 class="green">$400,000 mortgage for $1,607/mo.</h2>
+                    <h2 class="green">$200,000 mortgage for $790/month</h2>
+                    <h2 class="green">$300,000 mortgage for $1,185/month</h2>
+                    <h2 class="green">$400,000 mortgage for $1,581/month</h2>
                     <div class="disclosure">
-                        <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/advertising-disclosures-offers?disclosures=00018,00031,00065,00021')">
+                        <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/advertising-disclosures')">
                             Full Advertising Disclosures
                         </a>
                     </div>
                 </div>
             </div>
-            <div id="form-fields" class="form-fields">
-                @RenderBody()
-            </div>
+            
             <div class="clear">
             </div>
         </div>
         <div class="clear">&nbsp;</div>
-        <div id="reviewContainer">
-            <h2>Quick and easy</h2>
-            Nina and Melissa helped to make the entire refinancing process quick and easy. The
-            rate, fees and costs were all competitive, but it was the top notch service that
-            will have me recommending Lending Tree to my friends and coming back if ever I need
-            another loan.
-        </div>
+        
         <div id="footer-wrapper">
             <div id="footer" class="board">
                 <div class="footer-logo">
@@ -74,19 +66,32 @@
                             <span>Protect Against Fraud</span></a></p>
                 </div>
                 <!--End .footer-logo-->
-                <div class="footer-text">
-                    <a href="javascript:STMRCWindow('http://www.lendingtree.com/stmrc/privacy.asp?popup=true&bp=ltquickmatch', 550, 450)">
-                        Privacy Policy</a> | <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/termsofuse?popup=true')">
-                            Terms of Use</a> | <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/licenses-and-disclosures?popup=true',550, 450)">
-                                Licenses &amp; Disclosures</a>  | <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/advertising-disclosures',550, 450)">
+               <div class="footer-text">
+
+                    <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/privacy-policy', 550, 450)">
+
+                        Privacy Policy</a> | <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/terms-of-use')">
+
+                            Terms of Use</a> | <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/licenses-and-disclosures',550, 450)">
+
+                                Licenses &amp; Disclosures</a> | <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/advertising-disclosures',550, 450)">
+
                                 Full Advertising Disclosures</a><br />
+
                     <br />
+
                     <p style="text-align: left;">
+
                         LendingTree technology and processes are patented under U.S. Patent Nos. 6,385,594
+
                         and 6,611,816 and licensed under U.S. Patent Nos. 5,995,947 and 5,758,328. © 1998
+
                         - 2011 LendingTree, LLC. All Rights Reserved. This site is directed at, and made
+
                         available to, persons in the continental U.S., Alaska and Hawaii only.</p>
+
                 </div>
+
                 <!--End .footer-text-->
             </div>
             <!--End #footer-->
