--- a/1/EomTool/EomToolWeb/Views/PaymentBatches/Summary.cshtml
+++ b/1/EomTool/EomToolWeb/Views/PaymentBatches/Summary.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PaymentsViewModel
 
 @{
-    ViewBag.Title = "Payment Approval";
+    ViewBag.Title = "Payment Summary";
 }
 
 <style type="text/css">
@@ -61,7 +61,7 @@
 <div id="summaryOuter">
     <div id="summaryGridContainer">
 
-        <h2><a href="#" onclick="TogglePubRowMode(); return false">Payment Approval</a></h2>
+        <h2><a href="#" onclick="TogglePubRowMode(); return false">Payment Summary</a></h2>
 
 @{
     int iGroup = 0;
