--- a/2/LendingTree/LTWeb/Views/Questions/TermsConsent.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/TermsConsent.cshtml
@@ -1,4 +1,6 @@
-﻿<div id="submit-0" class="submitboard">
+﻿@model LTWeb.Models.QuestionVM
+
+<div id="submit-0" class="submitboard">
     <div class="read-detail">
         <h5 class="small-caption">
             By clicking on the button above,  consent, acknowledge and agree to the following and accept:</h5>
@@ -6,7 +8,7 @@
             <div class="accept-detail-panel">
                 <ul>
                     <li>Our <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/terms-of-use')">
-                        <span>Terms of Use Agreement</span></a> and <a href="javascript:STMRCWindow('javascript:STMRCWindow('https://www.lendingtree.com/legal/privacy-policy', 550, 450)">
+                        <span>Terms of Use Agreement</span></a> and <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/privacy-policy', 550, 450)">
                             <span>Privacy Policy</span></a></li>
                    <li>To receive important notices, and other <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/network-lenders-consent')">communications</a> at any telephone number or email address (including a mobile device) you entered so 
 
@@ -16,28 +18,14 @@
 
                                             requested with LendingTree or matched lenders.</li>
 
-                                            
-
-                                            
-
                                             <li>That LendingTree, a lender with whom you have been matched, or one of its third party associates may use an automatic dialing system in connection 
 
                                             with calls made to any telephone number you entered, even 
 
                                             if it is a cellular phone number or other service for which the called person(s) could be charged for such call.</li>
+                                            <li>That I have received and reviewed the <a href="javascript:STMRCWindow('https://secure.lendingtree.com/stmrc/brokerstatedisclosure.asp?state=@Model.State')">
 
-                                            
-
-                                            <li>That I have received and reviewed the <a href="javascript:STMRCWindow('https://secure.lendingtree.com/stmrc/brokerstatedisclosure.asp?state=AL')">
-
-                                                Mortgage Broker Disclosures</a> for my state <span id="myStateDisclosure">
-
-                                                    AL</span> </li>
-
-                                            
-
-                                            
-
+                                                Mortgage Broker Disclosures</a> for my state <span id="myStateDisclosure">@Model.State</span></li>
                                             <li>
 
                                             You are providing written consent under the Fair Credit Report Act for LendingTree, LLC and its 
@@ -47,8 +35,6 @@
                                             information from your credit profile or other information from our contracted Credit Bureau.
 
                                             </li>
-
-                                            
                 </ul>
             </div>
         </div>
