hardcode rates (temporary)

--- a/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
+++ b/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
@@ -24,9 +24,11 @@
                 <div id="page1RailRates" class="stroke">
                     <h2>Refinance Rates From</h2>
                     <div class="rate">
-                        @LTWeb.Session.Admin["Rate1"]%
+                        <!--@LTWeb.Session.Admin["Rate1"]%-->
+                        2.5%
                         <br />
-                        (@LTWeb.Session.Admin["Rate2"]% APR)*
+                        <!--(@LTWeb.Session.Admin["Rate2"]% APR)*-->
+                        (2.62% APR)*
                     </div>
                     <h2>Affordable Mortgage Payments</h2>
                     
