Set grid width to 1200px

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Foundation.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Foundation.cshtml
@@ -20,6 +20,8 @@
 
     @RenderSection("head", required: false)
     @Scripts.Render("~/bundles/modernizr")
+
+    <link href="~/Content/portal.css" rel="stylesheet" />
 </head>
 <body>
     @RenderBody()
