--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
@@ -1,5 +1,50 @@
 ﻿<div class="row">
-    <div class="twelve columns" style="background-color: blue">
-        <h2>Test</h2>
+    <div class="six columns toplogo">
+        <img src="~/Images/logo1.png" />
+    </div>
+    <div class="three columns topinfo">
+        <p>User@Domain.com</p>
+    </div>
+    <div class="three columns logout">
+        <a class="button" href="#">Log Out</a>
     </div>
 </div>
+<div class="row">
+    <div class="twelve columns grayband">
+    </div>
+</div>
+<div class="row">
+    <div class="three columns portaltabs-v">
+        <dl class="vertical tabs">
+            <dd><a href="#vertical1">My Account</a></dd>
+            <dd class="active"><a href="#vertical2">Reports</a></dd>
+            <dd><a href="#vertical3">Notifications</a></dd>
+            <dd><a href="#vertical4">Contacts</a></dd>
+        </dl>
+    </div>
+    <div class="nine columns portaltabs-h">
+        <dl class="tabs">
+            <dd><a href="#simple1">Performance</a></dd>
+            <dd class="active"><a href="#simple2">Offer Summary</a></dd>
+            <dd><a href="#simple3">Daily Summary</a></dd>
+            <dd><a href="#simple4">Daily Summary</a></dd>
+        </dl>
+        <ul class="tabs-content">
+            <li class="active" id="simple1Tab">This is simple tab 1s content. Pretty neat, huh?</li>
+            <li id="simple2Tab">This is simple tab 2s content. Now you see it!</li>
+            <li id="simple3Tab">This is simple tab 3s content.</li>
+            <li id="simple4Tab">This is simple tab 3s content.</li>
+        </ul>
+    </div>
+</div>
+<footer class="row">
+    <div class="twelve columns">
+        <div class="row">
+            <div class="six columns">
+                <p>&copy; 2013 Direct Agents</p>
+            </div>
+            <div class="six columns">
+            </div>
+        </div>
+    </div>
+</footer>
