--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Account/Register.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Account/Register.cshtml
@@ -27,6 +27,10 @@
                 @Html.LabelFor(m => m.ConfirmPassword)
                 @Html.PasswordFor(m => m.ConfirmPassword)
             </li>
+            <li>
+                @Html.LabelFor(m => m.CakeAdvertiserId)
+                @Html.TextBoxFor(m => m.CakeAdvertiserId)
+            </li>
         </ol>
         <input type="submit" value="Register" />
     </fieldset>
